Change slider values to slow, normal, fast instead of actual frequencies